--- a/src/styles.css
+++ b/src/styles.css
@@ -18,3 +18,11 @@ code {
   display: none !important;
 }
 
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+.scrollbar-hide {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
